<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="activity_create">Criar novo usuário</string>
    <string name="activity_dashboard">Menu Principal</string>
    <string name="activity_map">Mapa</string>
    <string name="activity_info">Informações</string>
    <string name="activity_nfc">Leitura Etiqueta NFC</string>
    
    <string name="app_name">Here I Am</string>
    <string name="action_settings">configurações</string>
    <string name="ok">ok</string>
    <string name="logout">logout</string>
    <string name="cancel">cancelar</string>
    <string name="required_field">campo obrigatório</string>
    
    <string name="create_name">nome</string>
    <string name="create_usuario">usuário</string>
    <string name="create_email">e-mail</string>    
    <string name="create_password">senha</string>
    <string name="create_confirm">confirmar senha</string>
    <string name="create_send">criar</string>
    
    <string name="login_name">usuário</string>
    <string name="login_password">senha</string>
    <string name="login_send">acessar</string>
    <string name="login_new">criar nova conta</string>
    
    <string name="dashboard_info">ver informações</string>
    <string name="dashboard_map">visualizar mapa</string>
    <string name="dashboard_nfc">leitura etiqueta NFC</string>
    <string name="dashboard_places">listar locais</string>
    <string name="dashboard_favorites">listar locais favoritos</string>
    <string name="dashboard_route">montar rota</string>
    <string name="dashboard_important">listar locais importantes</string>
    
    <string name="map_info_environment">info do ambiente</string>
    <string name="map_info_place">info do local</string>
    <string name="map_update">atualizar posição por NFC</string>    
    <string name="map_route">montar rota</string>
    <string name="map_route_update">atualizar rota</string>
    <string name="map_route_stop">parar rota</string>
    <string name="map_list_environments">listar ambientes</string>    
    <string name="map_list_places">listar locais</string>
    <string name="map_list_favorites">listar favoritos</string>
    <string name="map_list_importants">listar importantes</string>    
    
    <string name="info_txt">Informações:</string>
    <string name="info_add_favorite">adicionar aos favoritos</string>
    <string name="info_delete_favorite">deletar dos favoritos</string>
    <string name="info_show_calendar">visualizar agenda</string>  
    
    <string name="calendar_no_results">Sem Eventos na Agenda.</string>
    
    <string name="progresst_loading_map">Carregando mapa</string>
    <string name="progressm_loading_map">Por favor, aguarde a conclusão.</string>
    
    <string name="progresst_info_environment">Carregando Informações sobre o Ambiente</string>
    <string name="progressm_info_environment">Por favor, aguarde a conclusão.</string>
    
    <string name="progresst_info_place">Carregando Informações sobre o Local</string>
    <string name="progressm_info_place">Por favor, aguarde a conclusão.</string>
    
    <string name="progresst_add_favorite">Adicionando aos Favoritos</string>
    <string name="progressm_add_favorite">Por favor, aguarde a conclusão.</string>
    
    <string name="progresst_delete_favorite">Deletando dos Favoritos</string>
    <string name="progressm_delete_favorite">Por favor, aguarde a conclusão.</string>
    
    <string name="progresst_nfc">Leitura Etiqueta NFC</string>
    <string name="progressm_nfc">Aproxime o dispositivo na Etiqueta NFC.</string>
    
    <string name="progresst_login">Acessando</string>
    <string name="progressm_login">Verificando credenciais, por favor aguarde.</string>
    
    <string name="progresst_creation">Criando usuário</string>
    <string name="progressm_creation">Verificando credenciais inseridas, por favor aguarde.</string>
    
    <string name="progresst_environment_list">Carregando Lista de Ambientes</string>
    <string name="progressm_environment_list">Por favor, aguarde enquanto a lista de ambientes é carregada.</string>    
    
    <string name="progresst_places_list">Carregando Lista de Locais</string>
    <string name="progressm_places_list">Por favor, aguarde enquanto a lista de locais é carregada.</string>
    
    <string name="progresst_favorites_list">Carregando Lista de Locais Favoritos</string>
    <string name="progressm_favorites_list">Por favor, aguarde enquanto a lista de locais favoritos é carregada.</string>
    
    <string name="progresst_importants_list">Carregando Lista de Locais Importantes</string>
    <string name="progressm_importants_list">Por favor, aguarde enquanto a lista de locais importantes é carregada.</string>

    <string name="progresst_make_route">Montando Rota</string>
    <string name="progressm_make_route">Por favor, aguarde enquato a rota é montada.</string>
    
    <string name="progresst_loading_calendar">Carregando Agenda</string>
    <string name="progressm_loading_environment_calendar">Por favor, aguarde enquato a Agenda do Ambiente é carregada.</string>
    <string name="progressm_loading_place_calendar">Por favor, aguarde enquato a Agenda do Local é carregada.</string>
    
	<string name="alertt_without_connection">Sem conexão</string>
	<string name="alertm_without_connection">Por favor, habilitar acesso a internet.</string>
	
	<string name="alertt_without_favorites">Sem Locais Favoritos</string>
	<string name="alertm_without_favorites">Por favor, adicione Locais Favoritos.</string>

	<string name="alertt_wrong_user_or_password">Credenciais inválidas</string>
	<string name="alertm_wrong_user_or_password">Por favor, verificar as credenciais inseridas.</string>

	<string name="alertt_invalid_user">Usuário já existe</string>
	<string name="alertm_invalid_user">Por favor, inserir outra credencial.</string>
	
	<string name="alertt_invalid_email">Email inválido</string>
	<string name="alertm_invalid_email">Por favor, verificar as informações inseridas.</string>
	
	<string name="alertt_invalid_password">Senha inválida</string>
	<string name="alertm_invalid_password">Por favor, verificar as informações inseridas.</string>
	
	<string name="alertt_without_nfc">Dispositivo não possui NFC</string>
	<string name="alertm_without_nfc">Infelizmente seu dispositivo não possui NFC.</string>
	
	<string name="alertt_nfc_is_off">Recurso NFC desligado</string>
	<string name="alertm_nfc_is_off">Por favor, ative o recurso NFC em seu dispositivo.</string>
	
	<string name="alertt_service_is_off">Serviço Here I Am Indisponível</string>
	<string name="alertm_service_is_off">Por favor aguarde, o serviço Here I Am está indisponível no momento.</string>
	
	<string name="alertt_add_favorites_error">Erro ao adicionar Local Favorito</string>
	<string name="alertm_add_favorites_error">Houve um erro ao adicionar o local aos favoritos, por favor tente mais tarde.</string>
	
	<string name="alertt_delete_favorites_error">Erro ao deletar Local Favorito</string>
	<string name="alertm_delete_favorites_error">Houve um erro ao deletar o local aos favoritos, por favor tente mais tarde.</string>
	
	<string name="alertt_nfc_environment_place_error">Erro ao atualizar rota</string>
	<string name="alertm_nfc_environment_place_error">Houve um erro ao atualizar a rota, por favor realize leituras de etiquetas referente a Locais.</string>
	
	<string name="alertt_nfc_duplicate_place_error">Erro ao atualizar rota</string>
	<string name="alertm_nfc_duplicate_place_error">Os pontos A e B são iguais, por favor selecione locais distintos.</string>
	
	<string name="alertt_environment_list">Lista de Ambientes</string>
	<string name="alertt_place_list">Lista de Locais</string>
	<string name="alertt_route_A_list">Ponto A</string>
	<string name="alertt_route_B_list">Ponto B</string>
	<string name="alertt_importants_list">Lista de Locais Importantes</string>
	<string name="alertt_favorites_list">Lista de Locais Favoritos</string>
	
	<string name="toast_creation">Usuário criado com sucesso.</string>
	<string name="toast_added_favorite">Local adicionado aos Locais Favoritos com sucesso.</string>
	<string name="toast_deleted_favorite">Local deletado dos Locais Favoritos com sucesso.</string>
	
	<string name="alertt_add_calendar">Adicionar a Agenda</string>
	<string name="alertm_add_calendar">Você deseja adicionar a Agenda o Evento:</string>
</resources>
