<menu xmlns:android="http://schemas.android.com/apk/res/android" >           
    
    <item
        android:id="@+id/action_info_environment"
        android:orderInCategory="100"
        android:showAsAction="always"        
        android:icon="@drawable/info64"
        android:visible="false"/>
    
    <item
        android:id="@+id/action_info_place"
        android:orderInCategory="100"
        android:showAsAction="always"        
        android:icon="@drawable/info64"
        android:visible="false"/>        
    
    <item
        android:id="@+id/action_route_stop"
        android:orderInCategory="100"
        android:showAsAction="never"        
        android:title="@string/map_route_stop"
        android:visible="false"/>    
        
    <item
        android:id="@+id/action_route_update"
        android:orderInCategory="100"
        android:showAsAction="never"        
        android:title="@string/map_route_update"
        android:visible="false"/>
    
    <item
        android:id="@+id/action_update"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/map_update"/>
    
    <item
        android:id="@+id/action_route"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/map_route"/>
    
     <item
        android:id="@+id/action_list_environments"
        android:orderInCategory="100"
        android:showAsAction="never"        
        android:title="@string/map_list_environments"/>
    
    <item
        android:id="@+id/action_list_places"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/map_list_places"/>
    
    <item
        android:id="@+id/action_list_favorites"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/map_list_favorites"/>
    
    <item
        android:id="@+id/action_list_importants"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/map_list_importants"/>
    
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/logout"/>

</menu>
